Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36138

Qt Quick should handle GL problems better

XMLWordPrintable

    • 95fbcd19e85b642bb128af64a2e3acff9d76e415

      For example, GL context creation can fail on Windows when using dated drivers or due to ANGLE problems.

      This now results in blank windows or crashes.

      These errors should be checked and API should be added to the classes up to QQmlApplicationEngine allowing to query it and to exit an application cleanly.

        For Gerrit Dashboard: QTBUG-36138
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes